syntax = "proto3";

package user;

option go_package = "github.com/sprchu/tiktok/user/rpc/types/user";

service Service {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 user_id = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message UserInfoRequest {
  int64 user_id = 1;
}

message UserInfoResponse {
  UserInfo user_info = 1;
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  optional int64 follow_count = 3;
  optional int64 follower_count = 4;
  bool is_follow = 5;
}
